[package]
name = "rustbricks"
version = "0.0.1"
edition = "2021"
authors = ["Seó Ó Conchúbhair <seo.oconchubhair@gmail.com>"]
description = "Rust-based interface for seamless integration with the Databricks REST API."
license = "MIT"
readme = "README.md"
repository = "https://github.com/joezug/rustbricks"
keywords = ["databricks", "rest", "api", "interface", "rust", "wrapper", "client"]

[dependencies]
chrono = { version = "0.4.34", features = ["serde"] }
reqwest = { version = "0.11.24", features = ["json"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
tokio = { version = "1.36.0", features = ["full"] }
